# pMR

./: .clang-format  .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  NOTICE  README.md  index.html
doxygen/: CMakeLists.txt  annotated.html  classes.html  classpMR_1_1AllReduce-members.html  classpMR_1_1AllReduce.html  classpMR_1_1Communicator-members.html  classpMR_1_1Communicator.html  classpMR_1_1Connection-members.html  classpMR_1_1Connection.html  classpMR_1_1RecvWindow-members.html  classpMR_1_1RecvWindow.html  classpMR_1_1SendWindow-members.html  classpMR_1_1SendWindow.html  classpMR_1_1Target-members.html  classpMR_1_1Target.html  classpMR_1_1Window-members.html  classpMR_1_1Window.html  dir_08cbc4d3ffd47b4ea173f9694a28bcf3.html  dir_0f3cdec46afbc61a1ded8e1687c9c9a0.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_c287ebfe77906c0a7947bd3a2eed8c98.html  dir_f5a9de7d2b1291e03b2ca4280ceb87ae.html  doxygen.in  functions.html  functions_func.html  hierarchy.html  index.html  namespacemembers.html  namespacemembers_enum.html  namespacepMR.html  redirect.html
src/: CMakeLists.txt  allreduce.cpp  allreduce.hpp  communicator.hpp  config.hpp  config.hpp.in  connection.cpp  connection.hpp  operations.hpp  provider.cpp  provider.hpp  recvmemorywindow.cpp  recvmemorywindow.hpp  recvwindow.hpp  sendmemorywindow.cpp  sendmemorywindow.hpp  sendwindow.hpp  target.hpp  types.cpp  window.hpp
src/allreduce/: allreduce.hpp
src/allreduce/mpi/: CMakeLists.txt  allreduce.cpp  allreduce.hpp
src/allreduce/recursivedoubling/: CMakeLists.txt  allreduce.cpp  allreduce.hpp
src/api/c/: CMakeLists.txt  connection.cpp  pmr.cpp  pmr.h  recvwindow.cpp  sendwindow.cpp
src/arch/: processor.hpp
src/arch/x86/: CMakeLists.txt  processor.cpp
src/backends/: backend.hpp
src/backends/mpi/: CMakeLists.txt  communicator.cpp  communicator.hpp  exchange.cpp  local.cpp  local.hpp  sync.cpp  target.cpp  target.hpp  threadsupport.cpp  threadsupport.hpp
src/clusters/: connection.hpp
src/clusters/common/: CMakeLists.txt  connection.cpp  connection.hpp  provider.cpp  provider.hpp  recvmemorywindow.cpp  recvmemorywindow.hpp  sendmemorywindow.cpp  sendmemorywindow.hpp  types.cpp
src/clusters/idatacool/: CMakeLists.txt  connect.cpp  connection.cpp  connection.hpp  node.cpp  node.hpp  provider.cpp  provider.hpp  recvmemorywindow.cpp  recvmemorywindow.hpp  sendmemorywindow.cpp  sendmemorywindow.hpp  topology.cpp
src/clusters/mpi/: CMakeLists.txt  connect.cpp  connection.cpp  connection.hpp  provider.cpp  provider.hpp  recvmemorywindow.cpp  recvmemorywindow.hpp  sendmemorywindow.cpp  sendmemorywindow.hpp
src/clusters/qpace2/: CMakeLists.txt  connect.cpp  connection.hpp  node.cpp  node.hpp  recvmemorywindow.hpp  sendmemorywindow.hpp  topology.cpp  topology.hpp
src/clusters/qpace3/: CMakeLists.txt  connect.cpp  node.cpp  node.hpp
src/clusters/qpaceb/: CMakeLists.txt  connect.cpp  connection.cpp  connection.hpp  provider.cpp  provider.hpp  recvmemorywindow.cpp  recvmemorywindow.hpp  sendmemorywindow.cpp  sendmemorywindow.hpp  topology.cpp
src/clusters/shm/: CMakeLists.txt  connect.cpp  connection.cpp  connection.hpp  provider.cpp  provider.hpp  recvmemorywindow.cpp  recvmemorywindow.hpp  sendmemorywindow.cpp  sendmemorywindow.hpp
src/misc/: CMakeLists.txt  allocator.hpp  ip.cpp  ip.hpp  numeric.hpp  print.hpp  profiling.hpp  random.cpp  random.hpp  singleton.hpp  string.cpp  string.hpp  thread.hpp  time.cpp  time.hpp  type.hpp  xdump.cpp  xdump.hpp
src/providers/cma/: CMakeLists.txt  connection.cpp  connection.hpp  memorywindow.cpp  memorywindow.hpp  recvmemorywindow.cpp  recvmemorywindow.hpp  sendmemorywindow.cpp  sendmemorywindow.hpp
src/providers/loop/: CMakeLists.txt  connection.cpp  connection.hpp  memorywindow.cpp  memorywindow.hpp
src/providers/mpi/: CMakeLists.txt  connection.cpp  connection.hpp  memorywindow.cpp  memorywindow.hpp  recvmemorywindow.cpp  recvmemorywindow.hpp  sendmemorywindow.cpp  sendmemorywindow.hpp
src/providers/null/: CMakeLists.txt  connection.cpp  connection.hpp  memorywindow.cpp  memorywindow.hpp  recvmemorywindow.cpp  recvmemorywindow.hpp  sendmemorywindow.cpp  sendmemorywindow.hpp
src/providers/numa/: CMakeLists.txt  cpu.cpp  cpu.hpp  device.cpp  device.hpp  numa.cpp  numa.hpp  process.cpp  process.hpp  support.cpp  support.hpp  topology.cpp  topology.hpp
src/providers/ofi/: CMakeLists.txt  connection.hpp  ofi.hpp  recvmemorywindow.cpp  recvmemorywindow.hpp  sendmemorywindow.cpp  sendmemorywindow.hpp
src/providers/psm2/: CMakeLists.txt  config.hpp  connection.cpp  connection.hpp  endpoint.cpp  endpoint.hpp  error.cpp  error.hpp  globalendpoint.cpp  globalendpoint.hpp  libwrapper.c  matchedqueue.cpp  matchedqueue.hpp  message.cpp  message.hpp  options.cpp  options.hpp  psm.cpp  psm.hpp  psm2.hpp  recvmemorywindow.cpp  recvmemorywindow.hpp  sendmemorywindow.cpp  sendmemorywindow.hpp  softendpoint.hpp  stats.cpp  stats.hpp  units.cpp  units.hpp  uuid.cpp  uuid.hpp
src/providers/scif/: CMakeLists.txt  address.cpp  address.hpp  connection.cpp  connection.hpp  endpoint.cpp  endpoint.hpp  id.cpp  id.hpp  memoryregion.cpp  memoryregion.hpp  message.hpp  mmap.cpp  mmap.hpp  nodeid.cpp  nodeid.hpp  peerendpoint.cpp  peerendpoint.hpp  recvmemorywindow.cpp  recvmemorywindow.hpp  rma.hpp  scif.cpp  scif.hpp  sendmemorywindow.cpp  sendmemorywindow.hpp  topology.cpp  topology.hpp
src/providers/self/: CMakeLists.txt  connection.cpp  connection.hpp  memorywindow.cpp  memorywindow.hpp  recvmemorywindow.cpp  recvmemorywindow.hpp  sendmemorywindow.cpp  sendmemorywindow.hpp
src/providers/verbs/: CMakeLists.txt  completionqueue.cpp  completionqueue.hpp  connection.cpp  connection.hpp  connectionaddress.cpp  connectionaddress.hpp  context.cpp  context.hpp  device.cpp  device.hpp  deviceattributes.cpp  (+31 more)
src/threads/: thread.hpp
src/tool/: CMakeLists.txt  allreduce.cpp  allreduce.hpp  benchmark.cpp  benchmark.hpp  exchange.cpp  exchange.hpp  info.cpp  info.hpp.in  mpi.cpp  mpi.hpp  parameter.cpp  parameter.hpp  reduce.cpp  reduce.hpp  tool.cpp  usage.cpp  usage.hpp
(+151 files in other folders)
