add_library(PROVIDER_VERBS OBJECT
    completionqueue.cpp
    connectionaddress.cpp
    connection.cpp
    context.cpp
    device.cpp
    deviceattributes.cpp
    gid.cpp
    memoryaddress.cpp
    memoryregion.cpp
    memorywindow.cpp
    odp.cpp
    portattributes.cpp
    protectiondomain.cpp
    queuepair.cpp
    scattergather.cpp
    topology/adapter.cpp
    topology/guid.cpp
    topology/lid.cpp
    topology/ports.cpp
    topology/subnet.cpp
    topology/switch.cpp
    topology/mad/address.cpp
    topology/mad/addresshandle.cpp
    topology/mad/mad.cpp
    topology/mad/queuepair.cpp
    topology/mad/switch.cpp)
